Commit - connection bdd- alexG

--- a/ProjetEncheres/src/main/webapp/WEB-INF/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/header.jspf
@@ -1,6 +1,9 @@
 
 
 <header>
+<a href=""><img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
+</a>
+<nav>
+</nav>
 
-<h1>Eni Enchères</h1>
 </header>
