--- a/ProjetEncheres/src/main/webapp/WEB-INF/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/header.jspf
@@ -1,8 +1,8 @@
 
 
 <header>
-<a href=""><img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
-</a>
+<img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
+
 <nav>
 </nav>
 
