--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,12 +1,61 @@
+<%@ page language="java" contentType="text/html; charset=ISO-8859-1"
+    pageEncoding="UTF-8"%>
+<!DOCTYPE html>
+<html lang="fr">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ENI enchères</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/styles.css">
+  </head>
 
 
 <header>
-<img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
+    <a href="<%= request.getContextPath() %>">
+        <img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
+    </a>
 
-<nav>
-
-<a href="<%= request.getContextPath()%>/Inscription">Inscription</a>
-<a href="<%= request.getContextPath()%>/Connexion">Se connecter</a>
+<nav id="connectedNav">
+    <ul class="nav justify-content-end">
+        <li class="nav-item">
+          <a class="nav-link active" href="#">Enchères</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Vendre un article</a>
+        </li>
+        <div class="btn-group btn-profil">
+           
+            <button type="button" class="btn btn-info btn-profil-inside ">Mon profil           
+            </button>
+            <button type="button" class="btn btn-info dropdown-toggle dropdown-toggle-split btn-profil-inside" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                <span class="sr-only">Toggle Dropdown</span>
+              </button>
+            
+            <div class="dropdown-menu dropdown-menu-right">
+              <a class="dropdown-item" href="#">Déconnexion</a>
+              
+            </div>
+          </div>
+      </ul>
 </nav>
+<nav id="disconnectedNav">
+    <div class="btn-group">
+               <a class="btn btn-secondary btn-profil btn-profil-inside" href="<%= request.getContextPath()%>/Connexion">Se connecter / s'inscrire</a>
+    </div>
 
+</nav>
 </header>
+
+
+
+
+
+
+
+
+
+
+
+
