--- a/ProjetEncheres/src/main/webapp/css/styles.css
+++ b/ProjetEncheres/src/main/webapp/css/styles.css
@@ -1,6 +1,5 @@
-@charset "UTF-8";
 
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,600;0,800;0,900;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,700;0,900;1,900&display=swap');
 * {
     -moz-box-sizing: inherit;
          box-sizing: inherit;
@@ -24,12 +23,144 @@
           transition-timing-function: ease;
 }
 
+:root{
+ --background: #FFF2DF;
+ --blue: #41417F; 
+ --lightBlue: #A9C8D4;
+ --darkBackground: #F6E7D1;
+}
+
 html{
     overflow: unset !important;
 }
 
 body{
     margin: 0;   
-    font-family: 'Montserrat', sans-serif !important;
-   background-color: var(--Background) !important;
+    font-family: 'Montserrat', sans-serif !important ;
+   background-color: var(--background) !important ;
 }
+
+html a {
+        text-decoration: none ;
+}
+
+header{
+        display: flex !important;
+        flex-direction: row;
+        justify-content: space-between;
+        align-items: center;
+        margin: 5vh 15vh 0 15vh ;
+        
+}
+header a {
+        color: var(--blue);
+        font-weight: 600;
+        margin: 0vh 2vh 0 2vh;
+}
+
+header a img{
+        height: 20vh;
+}
+
+/** Bouton header profil **/
+
+
+.btn-profil{
+        border-radius: 5vh 5vh 5vh 5vh !important;
+        border: 2px solid !important;
+        border-color: var(--blue) !important;
+        
+}
+.btn-profil-inside{
+        background-color: transparent !important; 
+        border: 0px;
+        color: var(--blue) !important;
+        font-family: 'Montserrat', sans-serif ;
+        font-weight: 600;
+}
+.btn-profil-inside:hover{        
+        border: 0px;       
+       
+}
+
+
+
+
+/**modification du dropdown de connexion**/
+.pl-4, .px-4 {
+         padding-left: 0 !important; 
+    }
+
+    .show>.btn-secondary.dropdown-toggle:focus {
+        background-color: var(--blue) ! important;
+        color: white !important;
+    }
+    .btn-secondary:hover {
+        background-color: var(--blue) !important;
+        color: white !important; 
+    }
+    .btn-secondary:active {
+        box-shadow: 0 0 0 0.2rem rgb(246 231 209);
+    }
+    .dropdown-menu {
+            padding: 1vh !important;
+            background-color: var(--background);
+            font-weight: 600;
+            border-radius: 5vh 5vh 5vh 5vh !important;
+            border: 2px solid !important;
+            border-color: var(--blue) !important;
+
+    }
+
+    /*input research*/
+    .research-section{
+            display:flex;
+            justify-content:center;
+            align-items:center;
+            margin-top: 20vh; 
+    }
+    .inputResearch {
+            width: 100vh;
+            border-color: #adadad !important;
+            color: #525252 !important;
+            margin-bottom: 5vh;
+            font-size: 1rem !important;
+            height: 5vh;
+    }
+
+
+    /*class globale*/
+    .roundRadius{
+        padding: 1vh !important;
+        border-radius: 5vh 5vh 5vh 5vh !important;
+        border: 2px solid !important;
+       
+    }
+
+    .SB20{
+            width: 20vh !important;
+    }
+
+    .SB30{
+        width: 30vh !important;
+    }
+
+    .flex-spaceb{
+            display: flex;
+            justify-content: space-between;
+    }
+
+    .centered{
+            align-items: center;
+    }
+
+    .bg-blue{
+            background-color: var(--lightBlue) !important;
+            color: white; 
+    }
+
+    .montserrat-normal{
+        font-family: 'Montserrat', sans-serif !important;
+        font-weight: 400 !important;
+
+    }
