AG - correction requete SQL + ajout Servlet/JSP detail article

--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/affichageArticles.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/affichageArticles.jspf
@@ -6,8 +6,9 @@
 <section class="produits">
     <h2>Enchères en cours</h2>
     <div class="containerArticles">
+      
     
-    <!--  
+    <!-- BASE HTML  
         <div class="article roundRadiusNoBorder">
             <img class="roundRadiusNoBorder" src="asset/img/téléchargement.png">
                 <div class="descriptionArticle">
@@ -31,7 +32,7 @@
 	    <div class="article roundRadiusNoBorder">
             <img class="roundRadiusNoBorder" src="asset/img/téléchargement.png">
                 <div class="descriptionArticle">
-                    <h3><%= article.getNomArticle() %></h3>
+                    <a href="<%= request.getContextPath()%>/article?idArticle=<%= article.getNoArticle() %>"><h3><%= article.getNomArticle() %></h3></a>
                     <p>vendu par <a href="<%= request.getContextPath() %>/utilisateur?id=<%= article.getNoVendeur()%>"><%= article.getNomVendeur() %></a> </p>
                     <p class="prix">prix : <span> <%= article.getPrixVente() %>  pts</span></p>
                     <p class="finEnchère">fin de l'énchère: <span> 3 jours et 15h</span></p>
