--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,15 +1,21 @@
+<%@page import="fr.eni.encheres.CookieUtils"%>
+<%@page import="java.net.URLDecoder"%>
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 
 
 
 
-<% String message = (String) request.getAttribute("message"); 
-if(message != null){
-%>
-	<p style="color:green; text-align: center;"  ><%= message %></p>
+
+<%
+Cookie[] cookies = request.getCookies();
+if (CookieUtils.readCookie("message", cookies) != null) {
+        	%>
+<p style="color:green; text-align: center;"  ><%= CookieUtils.readCookie("message", cookies) %></p>
+        	
+ <% } %>
+
 	
-<%}%>
 
 <header>
 
