--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -1,3 +1,4 @@
+<%@page import="fr.eni.encheres.bo.Utilisateur"%>
 <%@page import="fr.eni.encheres.CookieUtils"%>
 <%@page import="java.net.URLDecoder"%>
 <%@ page language="java" contentType="text/html; charset=UTF-8"
@@ -24,6 +25,12 @@ if (CookieUtils.readCookie("message", cookies) != null) {
         <img src="asset/logo/Logo_eni_encheres_bleuFonce.png">
     </a>
 
+
+
+<%
+Utilisateur user = (Utilisateur) request.getSession(false).getAttribute("connectedUser");
+if(user != null){
+%>
 <nav id="connectedNav">
     <a class="nav-link" href="#">Enchères</a>
     <a class="nav-link" href="#">Vendre un article</a>
@@ -31,12 +38,12 @@ if (CookieUtils.readCookie("message", cookies) != null) {
     <a  class="nav-link btn-profil " href="#">Mon profil</a>  
       
 </nav>
-
+<%}else{ %>
 
 <nav id="disconnectedNav">   
         <a class="btn-profil" href="<%= request.getContextPath()%>/connexion">Se connecter / s'inscrire</a>
-    </nav>
-
+</nav>
+<%} %>
 
 </header>
 
