--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/header.jspf
@@ -35,7 +35,7 @@ if(user != null ){
     <a class="nav-link" href="#">Enchères</a>
     <a class="nav-link" href="#">Vendre un article</a>
     <a class="dropdown-item" href="<%=request.getContextPath()%>/logout">Deconnexion</a>   
-    <a  class="nav-link btn-profil " href="#">Mon profil</a>  
+    <a  class="nav-link btn-profil " href="<%= request.getContextPath() %>/utilisateur?id=<%= user.getNoUtilisateur() %>">Mon profil</a>  
       
 </nav>
 <%}else{ %>
