AlexG- page création vente

--- a/ProjetEncheres/src/main/webapp/css/styles.css
+++ b/ProjetEncheres/src/main/webapp/css/styles.css
@@ -65,6 +65,13 @@ header a img{
 }
 
 
+h2{
+        font-family: 'Amatic SC', sans-serif !important ;
+        color: var(--blue);       
+        font-size: xxx-large;
+        text-align: center;   
+}
+
 /** Slogan**/
 
 .slogan{
