--- a/ProjetEncheres/src/main/webapp/css/styles.css
+++ b/ProjetEncheres/src/main/webapp/css/styles.css
@@ -29,6 +29,7 @@ html{
 }
 
 body{
+    max-width: 100vw;
         min-height: 100vh;
     margin: 0;   
     font-family: 'Montserrat', sans-serif !important ;
@@ -65,6 +66,9 @@ header a img{
 }
 
 
+/** Slogan**/
+
+
 h2{
         font-family: 'Amatic SC', sans-serif !important ;
         color: var(--blue);       
@@ -72,7 +76,6 @@ h2{
         text-align: center;   
 }
 
-/** Slogan**/
 
 .slogan{
         font-family: 'Amatic SC', sans-serif !important ;
@@ -205,7 +208,8 @@ h2{
         
     }
 
-    .containerArticles{     
+    .containerArticles{  
+        max-width: 100vw;   
         display: flex;
         flex-direction: row;
         flex-wrap: wrap;
@@ -238,4 +242,32 @@ h2{
             height: 2px; 
             width : 20vw;
             margin: 10px;  
+    }
+
+
+
+    footer {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+             background-color: var(--background);  
+                            
+             max-width: 100vw; 
+             
+        }
+
+        .logo-footer{
+                height: 15vh;
+        }
+
+    .container{
+            margin-left: 25px;
+            width: 100vw; 
+    }
+
+    .flexRow{
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between;
     }
