--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/script.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/script.jspf
@@ -28,12 +28,12 @@ var achatRadio = document.getElementById("achat");
 var venteRadio = document.getElementById("vente");
 
 for(var index=0;index < checkboxVente.length;index++){
-    checkboxVente[index].addEventListener("change", function() { Uncheck(checkboxEnchere); UncheckRadio(achatRadio); checkRadio(venteRadio) }, false);
+    checkboxVente[index].addEventListener("click", function() { Uncheck(checkboxEnchere); UncheckRadio(achatRadio); checkRadio(venteRadio) }, false);
     //console.log("index vente: " + index + " ok");
    }
 
    for(var index=0;index < checkboxEnchere.length;index++){
-    checkboxEnchere[index].addEventListener("change", function() { Uncheck(checkboxVente); UncheckRadio(venteRadio); checkRadio(achatRadio) }, false);
+    checkboxEnchere[index].addEventListener("click", function() { Uncheck(checkboxVente); UncheckRadio(venteRadio); checkRadio(achatRadio) }, false);
     //console.log("index Enchere: " + index + " ok");
    }
 
