--- a/ProjetEncheres/src/main/webapp/css/styles.css
+++ b/ProjetEncheres/src/main/webapp/css/styles.css
@@ -30,7 +30,7 @@ html{
 
 body{
     max-width: 100vw;
-        min-height: 100vh;
+       
     margin: 0;   
     font-family: 'Montserrat', sans-serif !important ;
     /**background-color: var(--background) !important;**/
@@ -208,13 +208,27 @@ h2{
         
     }
 
-    .containerArticles{  
-        max-width: 100vw;   
-        display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        align-items: center;
-        justify-content: center;
+    .containerArticle{  
+	    max-width: 60vw;
+	    display: flex;
+	    margin: auto;
+	    flex-direction: row;
+	    flex-wrap: wrap;
+	    align-items: center;
+	    justify-content: space-around;
+	    margin-bottom: 50px;
+      
+    }
+    
+     .containerArticles{  
+	    max-width: 100vw;
+	    display: flex;
+	    margin: auto;
+	    flex-direction: row;
+	    flex-wrap: wrap;
+	    align-items: center;
+	    justify-content: center;
+	    margin-bottom: 50px;
       
     }
 
@@ -244,7 +258,9 @@ h2{
             margin: 10px;  
     }
 
-
+    .btnUtilisateurArticle{
+    		margin-top: 30px;
+    }
 
     footer {
             display: flex;
