AG-correction formulaire

--- a/ProjetEncheres/src/main/webapp/WEB-INF/jspf/affichageErreur.jspf
+++ b/ProjetEncheres/src/main/webapp/WEB-INF/jspf/affichageErreur.jspf
@@ -11,12 +11,12 @@
 			if(listeCodesErreur!=null)
 			{
 		%>
-				<p style="color:red;">Une erreur s'est produite :</p>
+				<p class="messageErreur" style="color:red;">Une erreur s'est produite :</p>
 		<%
 				for(int codeErreur:listeCodesErreur)
 				{
 		%>
-					<p><%=LecteurMessage.getMessageErreur(codeErreur)%></p>
+					<p class="messageErreur"><%=LecteurMessage.getMessageErreur(codeErreur)%></p>
 		<%	
 				}
 			}
