--- a/ProjetEncheres/src/main/webapp/css/styles.css
+++ b/ProjetEncheres/src/main/webapp/css/styles.css
@@ -288,6 +288,9 @@ h2{
     margin: auto;
     width: 200px;
     }    
+    
+    .messageErreur{
+    text-align: center;}
 
     .container{
             margin-left: 25px;
